%% Amores Fati — ER diagram of the current Postgres schema.
%% Render at https://mermaid.live or paste into a GitHub markdown block.

erDiagram
    USERS ||--o| ADMINS : "is admin"
    USERS ||--o| COMPANIES : "is company"
    USERS ||--o| STUDENTS : "is student"

    STUDENTS ||--o| TELEPHONE_STUDENT : "has"
    STUDENTS ||--o| ADDRESS_STUDENT : "has"
    COMPANIES ||--o| TELEPHONE_COMPANY : "has"
    COMPANIES ||--o| ADDRESS_COMPANY : "has"

    STUDENTS ||--o{ STUDENT_DISABILITY : "has"
    DISABILITY ||--o{ STUDENT_DISABILITY : "assigned to"

    STUDENTS ||--o{ STUDENT_SOCIAL_BENEFIT : "has"
    SOCIAL_BENEFIT ||--o{ STUDENT_SOCIAL_BENEFIT : "assigned to"

    STUDENTS ||--o| CURRICULUM : "owns"
    CURRICULUM ||--o{ CURRICULUM_SKILLS : "lists"
    SKILLS ||--o{ CURRICULUM_SKILLS : "is listed in"

    COMPANIES ||--o{ JOB_OPENINGS : "publishes"
    JOB_OPENINGS ||--o{ JOB_SKILLS : "requires"
    SKILLS ||--o{ JOB_SKILLS : "is required in"

    STUDENTS ||--o{ ENROLLMENTS : "enrolls"
    COURSES ||--o{ ENROLLMENTS : "offers"

    COURSES ||--o| IN_PERSON_COURSE_DETAILS : "has details"

    USERS {
        uuid id PK
        varchar email UK
        varchar password_hash
        varchar role
        timestamptz created_at
        timestamptz deleted_at
    }
    ADMINS {
        uuid id PK
    }
    COMPANIES {
        uuid id PK
        varchar cnpj UK
        varchar name
        varchar responsible_name
    }
    STUDENTS {
        uuid id PK
        varchar cpf UK
        varchar full_name
        varchar social_name
        date date_of_birth
        varchar gender
        varchar race
        varchar education
        varchar course_name
        varchar institution
        varchar activity_area
        boolean has_programming_experience
        varchar family_income
        text motivation
        varchar how_heard
        boolean has_computer
        boolean has_internet
        boolean committed_to_participate
        int household_size
    }
    TELEPHONE_STUDENT {
        uuid id PK
        uuid student_id FK
        varchar phone
    }
    ADDRESS_STUDENT {
        uuid id PK
        uuid student_id FK
        varchar neighbourhood
        char state
        varchar city
        varchar address
        varchar cep
        varchar complement
    }
    TELEPHONE_COMPANY {
        uuid id PK
        uuid company_id FK
        varchar phone
    }
    ADDRESS_COMPANY {
        uuid id PK
        uuid company_id FK
        varchar neighbourhood
        char state
        varchar city
        varchar address
        varchar cep
        varchar complement
    }
    DISABILITY {
        uuid id PK
        varchar name UK
        timestamp created_at
        timestamp updated_at
    }
    SOCIAL_BENEFIT {
        uuid id PK
        varchar name UK
        timestamp created_at
        timestamp updated_at
    }
    STUDENT_DISABILITY {
        uuid student_id PK
        uuid disability_id PK
    }
    STUDENT_SOCIAL_BENEFIT {
        uuid student_id PK
        uuid social_benefit_id PK
    }
    CURRICULUM {
        uuid id PK
        uuid student_id FK
        boolean is_available
        text about
        varchar linkedin
        varchar github
        varchar profile_photo
        varchar video_presentation
    }
    CURRICULUM_SKILLS {
        uuid curriculum_id PK
        uuid skill_id PK
    }
    SKILLS {
        uuid id PK
        varchar name UK
    }
    COURSE {
        uuid id PK
        varchar name
        varchar banner
        text description
        varchar course_load
        date start_date
        date end_date
        date start_registrations
        date end_registrations
        varchar modality
        varchar link_access
        int vacancy_count
        timestamptz created_at
    }
    IN_PERSON_COURSE_DETAILS {
        uuid id PK
        uuid course_id FK
        varchar address
        date start_date
        varchar shift
        varchar room
        int vacancies
    }
    JOB_OPENINGS {
        uuid id PK
        uuid company_id FK
        varchar name
        text description
        int openings_count
        varchar application_link
        boolean is_pcd
        boolean is_active
        varchar workplace_type
    }
    JOB_SKILLS {
        uuid job_id PK
        uuid skill_id PK
    }
    ENROLLMENTS {
        uuid id PK
        uuid student_id FK
        uuid course_id FK
        varchar type
        timestamptz created_at
    }
    SETTINGS {
        uuid id PK
        varchar key UK
        text value
    }
